# jellyfin-suite

./: .actrc  .env.example  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  README.zh-CN.md  jellyfin-recents.sln  jellyfin-suite.sln  manifest.json
.github/act-events/: tag-push.json
.github/workflows/: build.yml  release.yml
.opencode/command/: release.md
.opencode/tmp/: snapshot.txt
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-recents-view-plugin/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-scheduled-cleanup-task/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-poster-sheet-generator/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-rust-layout-engine/: data-model.md  plan.md  spec.md  tasks.md
specs/005-player-enhancer/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/006-home-tab-injection/: plan.md  research.md  spec.md  tasks.md
specs/007-long-press-speed-seek/: plan.md  spec.md  (+1 more)
src/poster-gen/: Cargo.toml
src/poster-gen/src/: cli.rs  font_manager.rs  frame_extractor.rs  image_stitcher.rs  logo.rs  main.rs  media_info.rs  preview.rs  qr.rs  run.rs  sampling.rs  text_renderer.rs
src/seek-preview/: Cargo.toml
src/seek-preview/src/: decoder.rs  disk_cache.rs  main.rs  protocol.rs  server.rs
(+157 files in other folders)
