[package]
name = "poster-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poster-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", features = ["jpeg"] }
cosmic-text = "0.19"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"

[profile.release]
strip = true
lto = true
