[package]
name = "poster-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poster-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", features = ["webp"] }
ab_glyph = "0.2"
rayon = "1"
resvg = "0.47"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.14"
sha2 = "0.11"
tiny-skia = "0.12"
twemoji-assets = { version = "1.5", features = ["svg"] }
woff2-patched = "0.4"

[profile.release]
strip = true
lto = true
