[package]
name = "seek-preview"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seek-preview"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ffmpeg-next = { version = "7", default-features = false, features = ["codec", "format", "software-scaling"] }
lru = "0.18"
anyhow = "1"
